# gtk-demo

./: .gitignore  CMakeLists.txt  README.md
data/ui/: window.glade
src/: CMakeLists.txt  main.c
